tests/codegen/errors/reader/special-forms/atom.reader.error.reader.let.missing.binding.form/reader-let-missing-binding-form.mon
;; TEST-ID: tests.codegen.reader-error.reader-let-missing-binding-form
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/special-forms
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected '(' or '[' after 'let'
;; TEST-ATOM: atom.reader.error.reader.let.missing.binding.form
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.let.missing.binding.form
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected '(' or '[' after 'let'
;; TEST-READER-PATH: reader.c:3347 parser.let
;; TEST-CODEGEN-PATH: diagnostic.parser.let
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:3347 Expected '(' or '[' after 'let'
;; TEST-USES-ATOM: atom.reader.error.reader.let.missing.binding.form
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.let
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/special-forms/atom.reader.error.reader.let.missing.binding.form
;; TEST-MENU-PATH: codegen/errors/reader/special-forms/atom.reader.error.reader.let.missing.binding.form
;; TEST-ATOM-LEAF: atom.reader.error.reader.let.missing.binding.form
;; TEST-CLI-TARGET: codegen errors reader special-forms

(module Main)
(let 1)
